# secure-protocol

./: .gitignore  CMakeLists.txt  README.md
include/: protocol.h
src/: main.c  protocol.c
